--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,7 +85,7 @@ android.applicationVariants.all {
                 }
                 if (buildType.name.equals("release")) {
                     output.outputFile = new File(output.outputFile.parent,
-                            "parents_release_" + packageTime() + ".apk");
+                            "children_release_" + packageTime() + ".apk");
                 }
         }
 }
