添加亲人页面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,6 +64,8 @@
 
         <activity android:name=".app.main.MainActivity" />
 
+        <activity android:name=".app.family.FamilyAddActivity"/>
+
         <activity android:name=".app.account.RegisterActivity" />
 
         <activity android:name=".app.setting.SettingActivity" />
