--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,7 +100,7 @@ dependencies {
     compile project(path: ':easeui')
     compile project(path: ':commonlib')
     compile 'no.nordicsemi.android.support.v18:scanner:1.4.0'
-
+    compile 'com.hyman:flowlayout-lib:1.1.2'
     compile 'com.android.support:appcompat-v7:26.1.0'
     //高德定位
 //    compile 'com.amap.api:location:3.3.0'
