--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -119,6 +119,8 @@
 
         <activity android:name=".app.edit.EleFenceAddActivity" />
 
+        <activity android:name="aio.health2world.qrcode.CaptureActivity"/>
+
         <activity
             android:name=".app.edit.EditNavActivity"
             android:theme="@style/dialogStyle" />
