--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,8 +81,8 @@ android.applicationVariants.all {
 //                            "parents_debug_" + packageTime() + ".apk");
                 }
                 if (buildType.name.equals("release")) {
-//                    output.outputFile = new File(output.outputFile.parent,
-//                            "children_release_" + packageTime() + ".apk");
+                    output.outputFile = new File(output.outputFile.parent,
+                            "children_release_" + packageTime() + ".apk");
                 }
         }
 }
