--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,7 @@ android {
         config {
             keyAlias 'yftx'
             keyPassword 'yftx2017'
-            storeFile file('E:/workspace_done/bracelet-children/health2world.jks')
+            storeFile file('../health2world.jks')
             storePassword 'yftx2017'
             v1SigningEnabled true
             v2SigningEnabled true
