--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -117,6 +117,8 @@
 
         <activity android:name=".app.home.FallPositionActivity"/>
 
+        <activity android:name=".app.home.SportsListActivity"/>
+
         <activity android:name="aio.health2world.qrcode.CaptureActivity"/>
 
         <activity
