--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -121,6 +121,8 @@
 
         <activity android:name=".app.home.SportsListActivity" />
 
+        <activity android:name=".app.family.RemindListActivity"/>
+
         <activity android:name="aio.health2world.qrcode.CaptureActivity" />
 
         <activity
