--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,7 +64,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".app.account.LoginActivity">
+        <activity
+            android:name=".app.account.LoginActivity"
+            android:launchMode="singleTop">
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
                 <action android:name="os.bracelets.children.login" />
@@ -133,7 +135,7 @@
 
         <activity android:name=".app.edit.EditRemindActivity" />
 
-        <activity android:name=".app.home.EleFenceActivity"/>
+        <activity android:name=".app.home.EleFenceActivity" />
 
         <service android:name=".service.AppService" />
 
@@ -243,27 +245,27 @@
         <!--<activity android:name=".app.nearby.ChatActivity" />-->
 
         <!--<activity-->
-            <!--android:name="com.hyphenate.easeui.ui.EaseShowBigImageActivity"-->
-            <!--android:screenOrientation="portrait" />-->
+        <!--android:name="com.hyphenate.easeui.ui.EaseShowBigImageActivity"-->
+        <!--android:screenOrientation="portrait" />-->
 
         <!--<meta-data-->
-            <!--android:name="EASEMOB_APPKEY"-->
-            <!--android:value="1121190318085857#intelligent" />-->
+        <!--android:name="EASEMOB_APPKEY"-->
+        <!--android:value="1121190318085857#intelligent" />-->
         <!--&lt;!&ndash; 声明SDK所需的service SDK核心功能&ndash;&gt;-->
         <!--<service-->
-            <!--android:name="com.hyphenate.chat.EMChatService"-->
-            <!--android:exported="true" />-->
+        <!--android:name="com.hyphenate.chat.EMChatService"-->
+        <!--android:exported="true" />-->
         <!--&lt;!&ndash; 声明SDK所需的receiver &ndash;&gt;-->
         <!--<receiver android:name="com.hyphenate.chat.EMMonitorReceiver">-->
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.PACKAGE_REMOVED" />-->
-                <!--<data android:scheme="package" />-->
-            <!--</intent-filter>-->
-            <!--&lt;!&ndash; 可选filter &ndash;&gt;-->
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.BOOT_COMPLETED" />-->
-                <!--<action android:name="android.intent.action.USER_PRESENT" />-->
-            <!--</intent-filter>-->
+        <!--<intent-filter>-->
+        <!--<action android:name="android.intent.action.PACKAGE_REMOVED" />-->
+        <!--<data android:scheme="package" />-->
+        <!--</intent-filter>-->
+        <!--&lt;!&ndash; 可选filter &ndash;&gt;-->
+        <!--<intent-filter>-->
+        <!--<action android:name="android.intent.action.BOOT_COMPLETED" />-->
+        <!--<action android:name="android.intent.action.USER_PRESENT" />-->
+        <!--</intent-filter>-->
         <!--</receiver>-->
 
     </application>
