--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,12 @@ static def packageTime() {
     return new Date().format("MM_dd_HHmm", TimeZone.getTimeZone("GMT+8"))
 }
 
+static String gitVersion() {
+    def cmd = 'git rev-parse --short HEAD'
+    def version = cmd.execute().text.trim()
+    return version
+}
+
 android {
     compileSdkVersion 26
     buildToolsVersion "28.0.3"
@@ -82,7 +88,7 @@ android.applicationVariants.all {
                 }
                 if (buildType.name.equals("release")) {
                     output.outputFile = new File(output.outputFile.parent,
-                            "children_release_" + packageTime() + ".apk");
+                            "children_release_" + gitVersion() + ".apk")
                 }
         }
 }
