--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -140,9 +140,7 @@
 
         <activity android:name=".app.home.EleFenceActivity" />
 
-        <!--<service android:name=".service.AppService" />-->
-
-        <!--<service android:name="com.huichenghe.bleControl.Ble.BluetoothLeService" />-->
+        <activity android:name=".app.about.HelpActivity"/>
 
         <service android:name="com.amap.api.location.APSService" />
 
